src/charts/BarChart/BarChart.css
/*
 * Chartsy - elegant, customizable, and interactive standalone charts for React
 * Omar Elghoul, 2025
 */

.chartsy-bar-chart {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: last;
    height: 100%;
}

.chartsy-bar-column {
    display: flex;
    flex-direction: row;
    width: 100%;
}

.chartsy-bar {
    border-top-left-radius: 0.5em;
    border-top-right-radius: 0.5em;
    width: 100%;
    line-height: 0em;
    position: relative;
}

.chartsy-bar-label {
    position: absolute;
    top: calc(100% + 1em);
    text-align: center;
}

.chartsy-bar-live:hover .chartsy-bar-column:not(:hover) {
    opacity: 0.6;
}

